[package]
name = "datadog-tracing"
version = "0.0.1"
authors = [
    "Fernando Goncalves <fernando.hsgoncalves@gmail.com>",
    "Alefh Sousa <alefh.sousa@gmail.com>"
]
edition = "2021"
license = "MIT"
description = "utilities for integrating Datadog with tracing"
readme = "README.md"
homepage = "https://github.com/will-bank/datadog-tracing"
repository = "https://github.com/will-bank/datadog-tracing"
keywords = ["datadog", "tracing", "opentelemetry", "axum"]
categories = ["web-programming"]
exclude = [".pre-commit-config.yaml"]

[features]
axum = ["dep:axum", "dep:tokio", "dep:axum-tracing-opentelemetry"]

[dependencies]
axum = { version = "^0.7", optional = true }
axum-tracing-opentelemetry = { version = "^0.16", optional = true }

chrono = "^0.4"
opentelemetry = { version = "^0.21" }
opentelemetry-datadog = { version = "0.9", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
reqwest = { version = "0.11", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.35", features = ["signal", "macros"], optional = true }
tracing = "^0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "^0.22"
tracing-serde = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json",  "registry"] }
anyhow = "1.0"

[patch.crates-io]
axum-tracing-opentelemetry = { git = "https://github.com/fhsgoncalves/tracing-opentelemetry-instrumentation-sdk", branch = "0.10.0-with-span-type" }